--- a/HomeAccountant/HomeAccountant.DA/HomeAccountant.DA.csproj
+++ b/HomeAccountant/HomeAccountant.DA/HomeAccountant.DA.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MatBlazor" Version="2.9.0-develop-042" />
+    <ProjectReference Include="..\HomeAccountant.DA.Interface\HomeAccountant.DA.Interface.csproj" />
   </ItemGroup>
 
 </Project>
